Breadcrumb bar alignment fix

--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -322,7 +322,7 @@ body:not(.home , .page-template-front-page-home , .page-template-front-page-vers
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 10px 0 24px;
+        padding: 0 10px 0 35px;
         .title{
             margin-top: 0.5rem;
             color: white;
